@@ -25,8 +25,9 @@
 <% end %>
 <% end %>
 <% end %>
-
 <div class="boardlink">
+<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=30556788900&amp;xfbml=1"></script><fb:comments href="<%= request.host_with_port + url_for(:action => 'trackback', :id => article.id) %>" num_posts="2" width="500"></fb:comments>
+
   [<%= link_to('コメントする', :action => "comment_form", :id => article.id) %>]
   [TrackBack URL:http://<%= request.host_with_port + url_for(:action => 'trackback', :id => article.id) %>]
   [<%= link_to('パーマリンク', :action => "show_enrollment", :id => article.enrollment_id) if article.enrollment_id %>]
